--- a/style.css
+++ b/style.css
@@ -20,3 +20,12 @@
 {
     font-size: 22px;
 }
+.copy_right_footer {
+    position: fixed;
+    color: #6c757d;
+    bottom: 0;
+    width: 100%;
+    background-color: #f5f5f5;
+    line-height: 3;
+    text-align: center;
+}
